--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-cmake
+opencv-python-headless
 face_recognition==1.3.0
 numpy==1.19.2
 pandas==1.1.5
-Pillow
+Pillow==9.5.0
 streamlit==1.10.0
 streamlit_option_menu==0.3.6
