--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+cmake
 https://files.pythonhosted.org/packages/11/93/ec41d6ef7e769977aa08e49441c52276da27859f12dcbf1c6deb96ce5e9f/dlib-19.22.0.tar.gz#sha256=b5f5fe43ad19a821903aad786381e5b51a9d219527148fd604e719b398e84108
 opencv-python-headless
 face_recognition==1.3.0
