--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-cmake==3.25.0
-opencv-python-headless==4.6.0.66
+cmake
+dlib
 face_recognition==1.3.0
-cmake==3.25.0
+opencv-python-headless==4.6.0.66
+cmake
 numpy==1.19.2
 pandas==1.1.5
 Pillow==9.5.0
